--- a/foundations/flex/01-flex-center/style.css
+++ b/foundations/flex/01-flex-center/style.css
@@ -1,4 +1,7 @@
 .container {
+  display: flex;
+  justify-content: center; /*Center items on main-axis*/
+  align-items: center; /*Center items on cross-axis*/
   background: dodgerblue;
   border: 4px solid midnightblue;
   width: 400px;
