--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,25 +1,46 @@
 .header  {
-  font-family: monospace;
-  background: papayawhip;
-}
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: monospace;
+    background: papayawhip;
+    padding: 10px;
+  }
+  
+  .logo {
+    font-size: 48px;
+    font-weight: 900;
+    color: tomato;
+    background: white;
+    padding: 4px 32px;
+    text-align: center;
+    flex: 2;
+  }
+  
+  ul {
+    /* this removes the dots on the list items*/
+    list-style-type: none;
+  }
+  
+  a {
+    font-size: 22px;
+    background: white;
+    padding: 8px;
+    /* this removes the line under the links */
+    text-decoration: none;
+  }
+  .left-links ul{
+    display: flex;
+    margin: 10px;
+    padding: 10px;
+    align-items: center;
+    gap: 12px;
+  }
 
-.logo {
-  font-size: 48px;
-  font-weight: 900;
-  color: tomato;
-  background: white;
-  padding: 4px 32px;
-}
-
-ul {
-  /* this removes the dots on the list items*/
-  list-style-type: none;
-}
-
-a {
-  font-size: 22px;
-  background: white;
-  padding: 8px;
-  /* this removes the line under the links */
-  text-decoration: none;
-}
+  .right-links ul{
+    display: flex;
+    margin: 10px;
+    padding: 10px;
+    align-items: center;
+    gap: 12px;
+  }
