--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -1,5 +1,3 @@
-/* this is some magical font-importing.  
-you'll learn about it later. */
 @import url('https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400;1,900&display=swap');
 
 body {
@@ -9,9 +7,13 @@ body {
 }
 
 .header {
+    padding: 16px;
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .profile-image {
@@ -45,4 +47,15 @@ a {
 
 ul {
   list-style-type: none;
+}
+
+.container{
+    display: flex;
+    align-items: center;
+    gap: 16px;
+}
+ul{
+    display: flex;
+    align-items: center;
+    gap: 16px;
 }
