--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -1,29 +1,79 @@
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  margin: 0;
-  min-height: 100vh;
-}
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+  }
 
-.header {
-  height: 72px;
-  background: darkmagenta;
-  color: white;
+ul{
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
 }
+ 
+li{
+  margin-bottom: 16px;
+    
+ } 
 
-.footer {
-  height: 72px;
-  background: #eee;
-  color: darkmagenta;
-}
+ a{
+    text-decoration: none;
+    color: white;
+    font-size: 24px;
+    font-weight: 700;
+ }
 
-.sidebar {
-  width: 300px;
-  background: royalblue;
-  box-sizing: border-box;
-}
+  .header {
+    height: 72px;
+    background: darkmagenta;
+    color: white;
+    font-size: 32px;
+    font-weight: 900;
+    display: flex;
+    align-items: center;
+    padding: 0 16px;
+  }
+  
+  .container{
+    flex: 1;
+    display: flex;
 
-.card {
-  border: 1px solid #eee;
-  box-shadow: 2px 4px 16px rgba(0,0,0,.06);
-  border-radius: 4px;
-}
+  }
+
+
+  .content{
+    padding: 58px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 42px;
+  }
+
+  .content .card {
+    width: 300px;
+    padding: 24px;
+  }
+
+  .footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 72px;
+    background: #eee;
+    color: darkmagenta;
+    text-align: center;
+  }
+  
+  .sidebar {
+    width: 300px;
+    padding: 16px;
+    flex-shrink: 0;
+    background: royalblue;
+    box-sizing: border-box;
+  }
+  
+  .card {
+    border: 1px solid #eee;
+    box-shadow: 2px 4px 16px rgba(0,0,0,.06);
+    border-radius: 4px;
+  }
